<resources>
    <string name="app_name">NotasDroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre y apellidos del alumno</string>
    <string name="nav_header_subtitle">correoalumno@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_expediente">Expediente</string>
    <string name="menu_matricula">Matricula</string>
    <string name="menu_examenes">Examenes</string>

    <string name="home_fotoperfil">Foto perfil</string>
    <string name="home_nombreyapellidos">Nombre y apellidos alumno</string>
    <string name="home_correo">correoalumno@gmail.com</string>
    <string name="home_contraseña">Contraseña</string>
    <string name="home_ciclo">Ciclo formativo</string>
    <string name="home_curso">Curso:</string>
    <string name="home_titulonotamedia">Nota media del grado:</string>
    <string name="home_notamedia">6.75</string>
    <string name="home_cambiarfoto">Elegir Foto</string>
    <string name="home_sacarfoto">Sacar Foto</string>
    <string name="title_activity_iniciar_sesion">IniciarSesionActivity</string>

    <string name="login_correo">Correo Electrónico</string>
    <string name="login_contrasenia">Contraseña</string>
    <string name="login_logoapp">Logo Aplicación</string>
    <string name="login_btn_login">Iniciar sesión</string>
    <string name="login_btn_register">Registrarse</string>

    <string name="register_nombreapellidos">Nombre y apellidos:</string>
    <string name="register_correo">Correo Electrónico:</string>
    <string name="register_contrasenia">Contraseña:</string>
    <string name="register_ciclo">Ciclo Formativo:</string>
    <string name="register_curso">Curso:</string>
    <string name="register_foto">Foto Perfil</string>
    <string name="register_logoapp">Logo Aplicación</string>
    <string name="register_rbt_dam">DAM</string>
    <string name="register_rbt_daw">DAW</string>
    <string name="register_rbt_asir">ASIR</string>
    <string name="register_rbt_primero">1º</string>
    <string name="register_rbt_segundo">2º</string>
    <string name="register_btn_gallery">Escoger foto de la galería</string>
    <string name="register_btn_camera">Sacar foto</string>

    <string name="icon">Icon</string>
</resources>