<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.expediente.ExpedienteFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="134dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageView
        android:id="@+id/home_fotoperfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/home_fotoperfil" />

    <TextView
        android:id="@+id/home_nombreyapellidos"
        android:layout_width="213dp"
        android:layout_height="17dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="24dp"
        android:text="@string/home_nombreyapellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <TextView
        android:id="@+id/home_correo"
        android:layout_width="214dp"
        android:layout_height="21dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:text="@string/home_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_nombreyapellidos" />

    <TextView
        android:id="@+id/home_curso"
        android:layout_width="42dp"
        android:layout_height="25dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="180dp"
        android:text="@string/home_curso"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <TextView
        android:id="@+id/home_notamedia"
        android:layout_width="53dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="188dp"
        android:text="@string/home_notamedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/home_titulonotamedia"
        app:layout_constraintTop_toBottomOf="@+id/home_curso" />

    <TextView
        android:id="@+id/home_titulonotamedia"
        android:layout_width="145dp"
        android:layout_height="20dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="180dp"
        android:text="@string/home_titulonotamedia"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_curso" />

    <TextView
        android:id="@+id/home_ciclo"
        android:layout_width="101dp"
        android:layout_height="22dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="180dp"
        android:text="@string/home_ciclo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toEndOf="@+id/home_curso"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <TextView
        android:id="@+id/home_contrasenia"
        android:layout_width="214dp"
        android:layout_height="21dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:password="true"
        android:text="@string/home_contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_correo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_cambiarfoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        android:src="@drawable/ic_home_foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true"
        android:contentDescription="@string/home_cambiarfoto" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_sacarfoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="92dp"
        android:clickable="true"
        android:contentDescription="@string/home_cambiarfoto"
        android:focusable="true"
        android:src="@drawable/ic_home_sacarfoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>