<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="147dp"
        android:text="@string/login_contrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_mail" />

    <EditText
        android:id="@+id/login_mail"
        android:layout_width="288dp"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_correo"
        android:autofillHints="" />

    <TextView
        android:id="@+id/login_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="147dp"
        android:text="@string/login_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="143dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/login_logoapp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_contrasenia"
        android:autofillHints="" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="27dp"
        android:clickable="true"
        android:contentDescription="@string/login_btn_login"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_login_login" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/login_btn_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="27dp"
        android:clickable="true"
        android:contentDescription="@string/login_btn_register"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/login_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_login_register" />
</androidx.constraintlayout.widget.ConstraintLayout>